--- a/app/src/main/res/layout/trainingitem.xml
+++ b/app/src/main/res/layout/trainingitem.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/txtTrainingItem"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
-    android:drawableStart="@drawable/trainingsel"
     android:drawablePadding="5dip"
     android:gravity="center_vertical"
-    android:padding="5dip" />
+    android:padding="5dip"
+    app:drawableStartCompat="@drawable/trainingsel" />
