--- a/app/src/main/res/layout-land/flightquery.xml
+++ b/app/src/main/res/layout-land/flightquery.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:layout_margin="4dip">
@@ -35,9 +36,9 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:clickable="true"
-            android:drawableStart="@drawable/collapse_light"
             android:focusable="true"
-            android:text="@string/fqFlightDate" />
+            android:text="@string/fqFlightDate"
+            app:drawableStartCompat="@drawable/collapse_light" />
 
         <LinearLayout
             android:id="@+id/sectFQDates"
@@ -153,7 +154,7 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:clickable="true"
-            android:drawableStart="@drawable/collapse_light"
+            app:drawableStartCompat="@drawable/collapse_light"
             android:focusable="true"
             android:text="@string/fqAirportsVisited" />
 
@@ -221,7 +222,7 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:clickable="true"
-            android:drawableStart="@drawable/collapse_light"
+            app:drawableStartCompat="@drawable/collapse_light"
             android:focusable="true"
             android:text="@string/fqFlightAircraft" />
 
@@ -250,7 +251,7 @@
             android:id="@+id/txtFQACFeatures"
             style="@style/DividerBar"
             android:clickable="true"
-            android:drawableStart="@drawable/collapse_light"
+            app:drawableStartCompat="@drawable/collapse_light"
             android:focusable="true"
             android:text="@string/fqAircraftFeatures" />
 
@@ -406,7 +407,7 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:clickable="true"
-            android:drawableStart="@drawable/collapse_light"
+            app:drawableStartCompat="@drawable/collapse_light"
             android:focusable="true"
             android:text="@string/fqFlightModel" />
 
@@ -438,7 +439,7 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:clickable="true"
-            android:drawableStart="@drawable/collapse_light"
+            app:drawableStartCompat="@drawable/collapse_light"
             android:focusable="true"
             android:text="@string/ccHeader" />
 
@@ -456,7 +457,7 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:clickable="true"
-            android:drawableStart="@drawable/collapse_light"
+            app:drawableStartCompat="@drawable/collapse_light"
             android:focusable="true"
             android:text="@string/fqFlightFeatures" />
 
@@ -649,7 +650,7 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:clickable="true"
-            android:drawableStart="@drawable/collapse_light"
+            app:drawableStartCompat="@drawable/collapse_light"
             android:focusable="true"
             android:text="@string/fqProperties" />
 
@@ -707,7 +708,7 @@
             android:id="@+id/txtFQNamedQueryHeader"
             android:clickable="true"
             android:focusable="true"
-            android:drawableStart="@drawable/collapse_light"
+            app:drawableStartCompat="@drawable/collapse_light"
             android:text="@string/fqQueryNameHeader" />
 
         <LinearLayout
