--- a/app/src/main/res/layout/expandablelist.xml
+++ b/app/src/main/res/layout/expandablelist.xml
@@ -12,7 +12,7 @@
         android:id="@+id/txtSearchProp"
         />
 
-    <android.support.v4.widget.SwipeRefreshLayout
+    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
         android:id="@+id/swiperefresh"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
@@ -21,5 +21,5 @@
             android:descendantFocusability="afterDescendants"
             android:layout_width="fill_parent"
             android:layout_height="fill_parent" />
-    </android.support.v4.widget.SwipeRefreshLayout>
+    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 </LinearLayout>
