--- a/app/src/main/res/layout/flightquery.xml
+++ b/app/src/main/res/layout/flightquery.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:layout_margin="4dip">
@@ -33,8 +34,8 @@
             style="@style/DividerBar"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:clickable="true"
-            android:drawableStart="@drawable/collapse_light"
+                android:clickable="true"
+            app:drawableStartCompat="@drawable/collapse_light"
             android:text="@string/fqFlightDate"
             android:focusable="true" />
 
@@ -152,7 +153,7 @@
             android:id="@+id/txtFQAirportsHeader"
             android:clickable="true"
             android:focusable="true"
-            android:drawableStart="@drawable/collapse_light"
+            app:drawableStartCompat="@drawable/collapse_light"
             android:text="@string/fqAirportsVisited" />
 
         <TableLayout
@@ -217,7 +218,7 @@
             android:id="@+id/txtFQAircraftHeader"
             android:clickable="true"
             android:focusable="true"
-            android:drawableStart="@drawable/collapse_light"
+            app:drawableStartCompat="@drawable/collapse_light"
             android:text="@string/fqFlightAircraft" />
 
         <LinearLayout
@@ -244,7 +245,7 @@
             android:id="@+id/txtFQACFeatures"
             style="@style/DividerBar"
             android:clickable="true"
-            android:drawableStart="@drawable/collapse_light"
+            app:drawableStartCompat="@drawable/collapse_light"
             android:text="@string/fqAircraftFeatures"
             android:focusable="true" />
 
@@ -393,7 +394,7 @@
             android:id="@+id/txtFQModelsHeader"
             android:clickable="true"
             android:focusable="true"
-            android:drawableStart="@drawable/collapse_light"
+            app:drawableStartCompat="@drawable/collapse_light"
             android:text="@string/fqFlightModel" />
 
         <LinearLayout
@@ -423,7 +424,7 @@
             android:id="@+id/txtFQCatClassHeader"
             android:clickable="true"
             android:focusable="true"
-            android:drawableStart="@drawable/collapse_light"
+            app:drawableStartCompat="@drawable/collapse_light"
             android:text="@string/ccHeader" />
 
         <TableLayout
@@ -439,7 +440,7 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:clickable="true"
-            android:drawableStart="@drawable/collapse_light"
+            app:drawableStartCompat="@drawable/collapse_light"
             android:text="@string/fqFlightFeatures"
             android:focusable="true" />
 
@@ -611,8 +612,8 @@
             android:id="@+id/txtFQPropsHeader"
             android:clickable="true"
             android:focusable="true"
-            android:drawableStart="@drawable/collapse_light"
-            android:text="@string/fqProperties" />
+            android:text="@string/fqProperties"
+            app:drawableStartCompat="@drawable/collapse_light" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -667,8 +668,8 @@
             android:id="@+id/txtFQNamedQueryHeader"
             android:clickable="true"
             android:focusable="true"
-            android:drawableStart="@drawable/collapse_light"
-            android:text="@string/fqQueryNameHeader" />
+            android:text="@string/fqQueryNameHeader"
+            app:drawableStartCompat="@drawable/collapse_light" />
 
         <LinearLayout
             android:id="@+id/sectFQNamedQueries"
