--- a/app/src/main/res/layout/newflight.xml
+++ b/app/src/main/res/layout/newflight.xml
@@ -240,9 +240,9 @@
             android:id="@+id/txtViewInTheCockpit"
             style="@style/DividerBar"
             android:clickable="true"
-            android:drawableStart="@drawable/collapse_light"
             android:text="@string/lblCatCockpit"
-            android:focusable="true" />
+            android:focusable="true"
+            mfb:drawableStartCompat="@drawable/collapse_light" />
 
         <LinearLayout
             android:id="@+id/sectInTheCockpit"
@@ -829,7 +829,7 @@
             android:id="@+id/txtPinnedPropertiesHeader"
             style="@style/DividerBar"
             android:clickable="true"
-            android:drawableStart="@drawable/collapse_light"
+            mfb:drawableStartCompat="@drawable/collapse_light"
             android:text="@string/lblCatProperties"
             android:focusable="true" />
 
@@ -860,7 +860,7 @@
             android:id="@+id/txtImageHeader"
             style="@style/DividerBar"
             android:clickable="true"
-            android:drawableStart="@drawable/collapse_light"
+            mfb:drawableStartCompat="@drawable/collapse_light"
             android:text="@string/cdImagesForFlight"
             android:focusable="true" />
 
@@ -876,7 +876,7 @@
             android:id="@+id/txtSignatureHeader"
             style="@style/DividerBar"
             android:clickable="true"
-            android:drawableStart="@drawable/collapse_light"
+            mfb:drawableStartCompat="@drawable/collapse_light"
             android:text="@string/lblSignature"
             android:focusable="true" />
         <LinearLayout
@@ -955,7 +955,7 @@
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:drawablePadding="4dip"
-                android:drawableStart="@drawable/icon"
+                mfb:drawableStartCompat="@drawable/icon"
                 android:text="@string/lblMyFlightbook" />
         </LinearLayout>
     </LinearLayout>
