--- a/app/src/main/res/layout/recentsws.xml
+++ b/app/src/main/res/layout/recentsws.xml
@@ -11,7 +11,7 @@
         android:gravity="center_horizontal"
         android:padding="2sp" />
 
-    <android.support.v4.widget.SwipeRefreshLayout
+    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
         android:id="@+id/swiperefresh"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
@@ -19,5 +19,5 @@
             android:id="@id/android:list"
             android:layout_width="fill_parent"
             android:layout_height="fill_parent" />
-    </android.support.v4.widget.SwipeRefreshLayout>
+    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 </LinearLayout>
