--- a/app/src/main/res/layout-land/newflight.xml
+++ b/app/src/main/res/layout-land/newflight.xml
@@ -53,6 +53,7 @@
                 android:layout_height="0dp"
                 android:layout_weight="0.8"
                 android:hint="@string/lblComments"
+                android:importantForAutofill="no"
                 android:inputType="text|textCapSentences|textAutoCorrect|textAutoComplete|textMultiLine"
                 android:minLines="2"
                 android:nextFocusDown="@+id/txtRoute"
@@ -70,6 +71,7 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="0.8"
                     android:hint="@string/lblRoute"
+                    android:importantForAutofill="no"
                     android:inputType="textCapCharacters|textNoSuggestions|textMultiLine"
                     android:minLines="2"
                     android:text="" />
