--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -9,4 +9,5 @@
     <color name="divider_background">#555555</color>
     <color name="divider_text">#00BCD4</color>
     <color name="progressTextColor">#FFFFFF</color>
+    <color name="webBarBckground">#222222</color>
 </resources>
