--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="divider_background">#555555</color>
     <color name="divider_text">#EEEEEE</color>
     <color name="progressTextColor">#000000</color>
+    <color name="webBarBckground">#EEEEEE</color>
 </resources>
