Rename Pending=>Queued to avoid confusion. Issue #194: add support for pending flights.

--- a/app/src/main/res/menu/mfbnewflightmenu.xml
+++ b/app/src/main/res/menu/mfbnewflightmenu.xml
@@ -12,6 +12,11 @@
         android:titleCondensed="@string/menuAddFlightLaterShort"
         app:showAsAction="never" />
     <item
+        android:id="@+id/btnSavePending"
+        android:title="@string/menuSavePending"
+        android:titleCondensed="@string/menuSavePendingShort"
+        app:showAsAction="ifRoom" />
+    <item
         android:id="@+id/menuTakePicture"
         android:icon="@drawable/ic_action_camera"
         android:title="@string/menuTakePicture"
