--- a/app/src/main/res/layout/expandablelist.xml
+++ b/app/src/main/res/layout/expandablelist.xml
@@ -18,7 +18,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <ExpandableListView
-            android:id="@id/android:list"
+            android:id="@android:id/list"
             android:descendantFocusability="afterDescendants"
             android:layout_width="fill_parent"
             android:layout_height="fill_parent" />
