--- a/app/src/main/res/layout/recentsws.xml
+++ b/app/src/main/res/layout/recentsws.xml
@@ -16,7 +16,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <ListView
-            android:id="@id/android:list"
+            android:id="@android:id/list"
             android:layout_width="fill_parent"
             android:layout_height="fill_parent" />
     </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
