--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -4,6 +4,7 @@
     <color name="colorPrimaryDark">#00BCD4</color>
     <color name="colorAccent">#00BCD4</color>
     <color name="textColorPrimary">#FFFFFF</color>
+    <color name="currencyGreen">#00EE00</color>
     <color name="colorBackground">#000000</color>
     <color name="colorDialog">#878787</color>
     <color name="divider_background">#555555</color>
