--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,6 +4,7 @@
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#263238</color>
     <color name="textColorPrimary">#000000</color>
+    <color name="currencyGreen">#008800</color>
     <color name="colorBackground">#FFFFFF</color>
     <color name="colorDialog">#dedede</color>
     <color name="divider_background">#555555</color>
