--- a/app/src/main/res/layout-land/newflight.xml
+++ b/app/src/main/res/layout-land/newflight.xml
@@ -25,7 +25,7 @@
                 style="@style/DateButton"
                 android:id="@+id/btnFlightSet"
                 android:layout_width="0dp"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:layout_weight=".3"
                 android:clickable="true"
                 android:focusable="true"
